- [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
- [fix] import of container locations now works when importing a database
- [fix] fixed issue where a meter container would re-appear if console was minimised and then restored and that container had been docked at some point

## v2.10.3.6 Change Log - WIP dev_8b
- [fix] rx att + tx att was being used in dup display, leading to incorrect display. Fixed

## v2.10.3.6 Change Log - WIP dev_8
- [add] Led Indicator meter item - use variables in c# style code to provide a Boolean expression for the indicator  eg  %swr% > 2.0  or  %split% == "SPLIT"
- [add] Added enable G2 panel; not enabled if Andromeda panel enabled and vice versa Added button actions for band selection - G8NJJ
- [add] ability to create default G2 settings - G8NJJ
- [add] band selector on the vfo display in multimeters. Just click the band text.
- [add] filter selector on the vfo display in multimeters. Just click the filter text
- [add] mode selector on the vfo display in multimeters. Just click the mode text
- [add] vfo display multimeter now allows changing values by hovering over them and spinning the mouse wheel, click to inc/dec, digit keys can be pressed
- [add] TCPip client and serial connectors added to MultiMeter I/O
- [add] web image meter item - pull images from the internet and display in a meter container
- [add] minimise option for containers. Default will vanish when thetis console is minimised
- [fix] comp meter when used in rx2 shows the correct rx1 values
- [change] Button actions processed more simply when G2 enabled (no shift action etc) - G8NJJ
- [change] rotator meter item now can be shown in az/ele/both mode. Requires you to remove-add the rotator if you were using it

## v2.10.3.6 Change Log - WIP dev_7
- [add] MultiMeterIO - get external data - use it in the MultiMeter system. Watch video : https://youtu.be/oYRrm8YpD24